--- a/unit_10/summer.html
+++ b/unit_10/summer.html
@@ -8,79 +8,79 @@
 	<body id="summer-main">
 		<h1>Summer</h1>	
 			<section class="icons3">
-				<h2>Banff World Television Festival</h2>
+			<h2>Banff World Television Festival</h2>
 				<h3>Canada (June 7-10)</h3>
-					<img src="photos/banff.jpg">
+					<img class="innerpictures" src="photos/banff.jpg" alt="the logo BANFF on the mountain background">
 					<p>The Festival began as an intimate space where unparalleled access and cutting-edge insight could combine to forge relationships and launch new business.</p>
 					<a href="http://banffmediafestival.com/about-banff/">Read More</a>
 			</section>
 			<section class="icons3">
-				<h2>Isle of Wight Festival</h2>	
+			<h2>Isle of Wight Festival</h2>	
 				<h3>UK (June 11-14)</h3>
-					<img src="photos/isleofwight.jpg">
+					<img class="innerpictures" src="photos/isleofwight.jpg" alt="the logo">
 					<p>The Festival takes place in the town of Newport and is steeped in history and recognised around the world for its legendary artists and coming acts.</p>
 					<a href="http://www.isleofwightfestival.com/">Read More</a>
 			</section>
 			<section class="icons3">
-				<h2>Glastonbury Festival</h2>	
+			<h2>Glastonbury Festival</h2>	
 				<h3>UK (June 24-28)</h3>
-					<img src="photos/glastonbury.jpg">
+					<img class="innerpictures" src="photos/glastonbury.jpg" alt="a big croud of people celebrating the festival">
 					<p>Glastonbury Festival is the largest greenfield music and performing arts festival in the world and a template for all the festivals that have come after it. </p>
 					<a href="http://www.glastonburyfestivals.co.uk/history/">Read More</a>
 			</section>
 			<section class="icons3">
-				<h2>Wimbledon</h2>
+			<h2>Wimbledon</h2>
 				<h3>London,UK (Jun,29-Jul,12)</h3>
-					<img src="photos/wimbledon.jpg">
+					<img class="innerpictures" src="photos/wimbledon.jpg" alt="Wimbledon stadium">
 					<p>Wimbledon, is the oldest tennis tournament in the world.It has been held in London since 1877. It is one of the 4 Grand Slam tennis tournaments : the Australian Open, the French Open and the US Open.</p>
 					<a href="http://www.wimbledon.com/index.html"> Read More </a>
 			</section>
 			<section class="icons3">
-				<h2>Canada Day</h2>
+			<h2>Canada Day</h2>
 				<h3>Canada (July 1)</h3>
-					<img src="photos/canadaday.jpg">
+					<img class="innerpictures" src="photos/canadaday.jpg" alt="Canadiene main building">
 					<p>On July 1, 1867, the nation was officially born when the Constitution Act joined three provinces into one country: Nova Scotia, New Brunswick, and the Canada province.</p>
 					<a href="http://mentalfloss.com/article/31069/what-exactly-canada-day">Read More</a>
 			</section>
 			<section class="icons3">
 				<h2>Roskilde Festival</h2>
 				<h3>Copenhagen, Denmark (July 1-4)</h3>
-					<img src="photos/roskilde.jpg">
+					<img class="innerpictures" src="photos/roskilde.jpg" alt="people celebrating the festival with fireworks">
 					<p>Roskilde Festival is the largest North European culture and music festival and has existed since 1971. The purpose is to support initiatives benefitting children and young people.</p>
 					<a href="http://www.roskilde-festival.dk/">Read More</a>
 			</section>
 			<section class="icons3">
-				<h2>Independence Day</h2>
+			<h2>Independence Day</h2>
 				<h3>USA (July 4)</h3>
-					<img src="photos/independence.jpg">
+					<img class="innerpictures" src="photos/independence.jpg" alt="two american flags crossed">
 					<p>Independence Day is annually celebrated on July 4. It is the anniversary of the declaration of independence from Great Britain in 1776.</p>
 					<a href="http://www.timeanddate.com/holidays/us/independence-day">Read More</a>
 			</section>		
 			<section class="icons3">
-				<h2>Wireless Music Festival</h2>
+			<h2>Wireless Music Festival</h2>
 				<h3>England (July 3-5)</h3>
-					<img src="photos/wireless.jpg">
+					<img class="innerpictures" src="photos/wireless.jpg" alt="crowds of people celebrating festival">
 					<p>The Wireless Festival is a music festival in England that takes place every year in London, and took place at Harewood House, Leeds in 2006 and 2007. It is owned and managed by Live Nation.</p>
 					<a href="http://www.wirelessfestival.co.uk/">Read More</a>
 			</section>
 			<section class="icons3">
-				<h2>Calgary Stampede</h2>
+			<h2>Calgary Stampede</h2>
 				<h3>Canada (July 3-12)</h3>
-					<img src="photos/calgary.jpg">
+					<img class="innerpictures" src="photos/calgary.jpg" alt="the horse race">
 					<p>The Calgary Stampede preserves and celebrates western heritage, cultures and community spirit. The Stampede promotes volunteerism, presentsa year-round slate of events and investsing youth.</p>
 					<a href="http://www.calgarystampede.com/">Read More</a>
 			</section>
 			<section class="icons3">
-				<h2>International Jazz Festival</h2>	
+			<h2>International Jazz Festival</h2>	
 				<h3>Montreux, Switzerland (July 3-18)</h3>
-					<img src="photos/montreux.jpg">
+					<img class="innerpictures" src="photos/montreux.jpg" alt="the festival celebration">
 					<p>The Montreux Jazz Festival is a music festival, held annually on the Lake Geneva shoreline. It is the 2nd largest annual jazz festival in the world.</p>
 					<a href="http://www.montreuxjazzfestival.com/fr">Read More</a>
 			</section>
 			<section class="icons3">		
-				<h2>Chinese New Year</h2>
+			<h2>Chinese New Year</h2>
 				<h3>China (Feb, 8)</h3>
-					<img src="photos/chinanewyear.jpg">
+					<img class="innerpictures" src="photos/chinanewyear.jpg" alt="the chinese calendar">
 					<p>Spring Festival, widely known as Chinese New Year in the West, is the most important traditional festival, and most important celebration for families.</p>
 					<a href="http://www.chinahighlights.com/travelguide/special-report/chinese-new-year/">Read More</a>
 			</section>
